001-multi-team-demo/app-team-2/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-team-2
  labels:
    name: app-team-2
    istio-injection: enabled
