001-multi-team-demo/app-team-2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: up-and-running-web
  namespace: app-team-2
  labels:
    app: up-and-running-web
spec:
  selector:
    matchLabels:
      app: up-and-running-web
  template:
    metadata:
      labels:
        app: up-and-running-web
    spec:
      containers:
      - name: up-and-running-web
        image: europe-docker.pkg.dev/thiatt-manual-020/showcase-containers/001-up-and-running:test-v001
        ports:
        - containerPort: 8080
