001-multi-team-demo/app-team-2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: up-and-running
  namespace: app-team-2
  labels:
    app: up-and-running
    team: app-team-2
spec: 
  selector: 
    app: up-and-running
  ports: 
  - name: http
    port: 8080
    protocol: TCP
